fix scrollbar on open nav

--- a/src/app.scss
+++ b/src/app.scss
@@ -5,7 +5,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-
 }
 
 $body-color: #e4e9f7;
@@ -21,6 +20,7 @@ $tran-05: all 0.5s ease;
 
 body {
   animation: fadein 1s;
+  
 }
 
 .container{
@@ -33,6 +33,7 @@ body {
   }
 }
 .container.open{
+  overflow-y: scroll;
   // filter: blur();
   transition: $tran-03;
 }
